menambahkan link youtube pada footer

--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
     <!-- akhir contact -->
     <!-- footer -->
     <footer class="text-white text-center pb-3" style="background-color: #18b7cc">
-      <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/tibroni_assopi/" class="text-white fw-bold">Nandi Tibroni A</a></p>
+      <p>Created with <i class="bi bi-heart-fill text-danger"></i> by <a href="https://www.instagram.com/tibroni_assopi/" class="text-white fw-bold">Nandi Tibroni A</a>
+        <img src="img/youtube.png" width="20"> <a href="https://www.youtube.com/channel/UC6gc2lnFhFBT2iBJ5sv3FOg" class="text-white fw-bold">Youtube</a></p>
     </footer>
     <!-- akhir footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
