menambahkan gallery photo

--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@
           </div>
         </div>
       </div>
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h3><a href="gallery.html"> More Photos. . .</a></h3>
+          </div>
+        </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -147,6 +153,8 @@
         ></path>
       </svg>
     </section>
+    
+
     <!-- akhir card -->
     <!-- contact -->
     <section id="contact">
