menambah embedded yt

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
           <div class="col-md-4">
             <p>sebagai freelancer, saya pernah menjalankan bisnis kecil, yaitu jual-beli akun game online, mendapatkan komisi dari pembuatan banner online shop client saya,
-              dan pernah di minta sahabat saya untuk mengabadikan moment pre-wedding teman saya.
+              dan pernah di minta sahabat saya untuk mengabadikan moment pre-weddingnya.
             </p>
           </div>
         </div>
@@ -85,7 +85,28 @@
       </svg>
     </section>
     <!-- akhir about -->
-
+    <!-- youtube -->
+    <section id="youtube">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>My Youtube Channel</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-5 mb-3">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/zizmocKgGbs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+          </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#e2edff"
+          fill-opacity="1"
+          d="M0,160L26.7,149.3C53.3,139,107,117,160,133.3C213.3,149,267,203,320,197.3C373.3,192,427,128,480,101.3C533.3,75,587,85,640,117.3C693.3,149,747,203,800,213.3C853.3,224,907,192,960,160C1013.3,128,1067,96,1120,69.3C1173.3,43,1227,21,1280,26.7C1333.3,32,1387,64,1413,80L1440,96L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+    
     <!-- card -->
     <section id="projects">
       <div class="container">
