--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Web Developer &amp; Freelancer</h3>
-            <p class="fst-italic">Fresh graduate from BinaDarma University palembang,south sumatra with GPA: 3.34/3.00</p>
+            <p class="fst-italic">Fresh graduate from BinaDarma University palembang,south sumatra with GPA: 3.34/4.00</p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -111,7 +111,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>nanditibroni1997@example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>nanditibroni1997@gmail.com</span></li>
                   
                 </ul>
               </div>
