tambah foto protofolio

--- a/index.html
+++ b/index.html
@@ -378,6 +378,22 @@
           </div>
         </div>
       </div>
+      <div class="col-lg-4 col-md-6 portfolio-item filter-website">
+        <div class="portfolio-wrap">
+          <img src="assets/img/fe1.png" class="img-fluid" alt="" />
+          <div class="portfolio-links">
+            <a href="assets/img/fe1.png" data-gallery="portfolioWebsite" class="portfolio-lightbox" title="front end use VueJs"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 portfolio-item filter-website">
+        <div class="portfolio-wrap">
+          <img src="assets/img/fe2.png" class="img-fluid" alt="" />
+          <div class="portfolio-links">
+            <a href="assets/img/fe2.png" data-gallery="portfolioWebsite" class="portfolio-lightbox" title="front end use VueJs"><i class="bx bx-plus"></i></a>
+          </div>
+        </div>
+      </div>
 
       <!-- {{-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
         <div class="portfolio-wrap">
